--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-redux-router": "^0.0.14",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^3.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "typescript": "^5.7.3",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "vite": "^6.1.0"
   }
 }
