--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3003
-API_URL = "http://localhost:3000"
+REACT_APP_API_URL= "http://localhost:3000"
 ACTION_CABLE_URL="ws://localhost:3000/cable"
